--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,12 @@
 services:
   - type: web
-    name: RandysAiBot
+    name: tlg-chatbot
     env: python
-    pythonVersion: 3.10.12
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port 10000
+    autoDeploy: true
+    envVars:
+      - key: OPENAI_API_KEY
+        sync: false
+      - key: TELEGRAM_BOT_TOKEN
+        sync: false
